@@ -34,6 +34,12 @@ Ruby, Python, or some other interpreted language in stead.</p>
 <p>If you came here looking to join the effort of defining a new
 interpreted language with ambitous goals, you're exactly where
 you're supposed to be.</p>
+<p>On these pages you will find the description of the Jail language, the 
+current status of development, how to join the effort of creating a new
+object-oriented programming language, etc.</p>
+<p>The intended audience of the Jail language is the part of humanity that wants to use a computer without knowing how it works, which (I believe) goes for the vast majority of people.</p>
+<p>For most people, the Bash shell is too complicated; Perl, Ruby and Python are beyond reach; C and Pascal are way too complicated and C++ and Java are beyond their wildest dreams.</p>
+<p><i>Jail is intended for those people for whom an accessible language is not available at this time.</i></p>
 </div>
 </td>
 <td width="210" valign="top">
@@ -46,6 +52,6 @@ width="210" height="62" border="0" align="right" alt=
 </tr>
 </tbody>
 </table>
-<div align="right">This page was last updated: $Date: 2003/09/21 16:29:39 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/07 11:04:46 $</div>
 </body>
 </html>
