@@ -1,45 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-<title>JAIL: Just Another Interpreted Language</title>
-<meta http-equiv="content-type" content=
-"text/html; charset=us-ascii">
-</head>
-<body>
-<div align="center"><img src="jail-banner.png" alt=
-"Just Another Interpreted Language">
-</div>
-<table style="width: 100%"> 
-<tbody>
-<tr>
-<td style="width: 20%;" valign="top">
-<iframe src="table.html" type="text/html" width="100%" height="800" frameborder=0>
-<p>The TOC should be here..</p>
-</iframe>
-</td>
-<td valign="top">
-<div align="justify">
-<h2><a name="Intended_audience"></a>Intended audience</h2>
-<p>The intended audience of the Jail language is the part of
-humanity that wants to use a computer without knowing how it works,
-which (I believe) goes for the vast majority of people.</p>
-<p>For most people, the Bash shell is too complicated; Perl, Ruby
-and Python are beyond reach; C and Pascal are way too complicated
-and C++ and Java are beyond their wildest dreams.</p>
-<p>Jail is intended for those people for whom an accessible
-language is not available at this time.</p>
-</div>
-</td>
-<td width="210" valign="top">
-<a href=
-"http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
-width="210" height="62" border="0" align="right" alt=
-"SourceForge.net Logo"></a>
-</td>
-</tr>
-</tbody>
-</table>
-<div align="right">This page was last updated: $Date: 2003/09/21 16:29:39 $</div>
-</body>
-</html>
