@@ -18,10 +18,6 @@ bgcolor="#EDEDED" style="width: 100%;">
 "index.html" target="_top">Welcome</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="intended_audience.html" target="_top">Intended
-audience</a><br></td>
-</tr>
-<tr>
 <td valign="top"><a href="goals.html" target="_top">Goals</a><br></td>
 </tr>
 <tr>
